Fixed the incorrect layout issue of the footer where it appears inside the modal

--- a/week8/css/style.css
+++ b/week8/css/style.css
@@ -1470,6 +1470,7 @@ footer.social-links-container {
 
 .modal-content p {
     font-size: 1.6em;
+    text-align: center;
 }
 
 /* The Close Button */
@@ -1496,6 +1497,12 @@ footer.social-links-container {
     justify-items: stretch; 
 }
 
+.video-container img {
+    width: 100%;
+    height: 60%;
+    object-fit: cover;
+}
+
 .video-container video {
     width: 100%;
     height: 60%;
@@ -1503,6 +1510,7 @@ footer.social-links-container {
 
 .video-container div p {
     margin-bottom: 10px;
+    margin-top: 10px;
     font-size: 1.4em;
     text-align: center;
 }
